--- a/index.html
+++ b/index.html
@@ -1,78 +1,80 @@
-<!DOCTYPE html>
-<html lang="bn">
+<!DOCTYPE html><html lang="bn">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ইব্রাহিম খলিল - ভেটেরিনারি হেলথ কেয়ার</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f7f9;
-            color: #333;
-            margin: 0;
-            padding: 0 20px;
-        }
-        header {
-            background-color: #34495e;
-            color: white;
-            padding: 15px 20px;
-            text-align: center;
-        }
-        main {
-            max-width: 800px;
-            margin: 30px auto;
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px #ccc;
-        }
-        h1 {
-            color: #2c3e50;
-        }
-        p {
-            line-height: 1.6;
-        }
-        footer {
-            text-align: center;
-            margin: 40px 0 20px 0;
-            color: #777;
-        }
-        a {
-            color: #2980b9;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ডাঃ ইব্রাহিম খলিল | পশু চিকিৎসক</title>
+  <link rel="icon" type="image/png" href="https://postimg.cc/ygw1Hs4J">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #0077b6, #00b4d8);
+      color: #fff;
+    }
+    header {
+      text-align: center;
+      padding: 50px 20px;
+      background-image: url('https://postimg.cc/vgPnL1VJ');
+      background-size: cover;
+      background-position: center;
+      color: #fff;
+    }
+    header h1 {
+      font-size: 3rem;
+      margin: 0;
+    }
+    .content {
+      padding: 30px;
+      max-width: 800px;
+      margin: auto;
+      background-color: rgba(0, 0, 0, 0.5);
+      border-radius: 10px;
+    }
+    .info {
+      margin: 20px 0;
+      line-height: 1.8;
+    }
+    .social {
+      text-align: center;
+      margin-top: 30px;
+    }
+    .social a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: #fff;
+      font-size: 24px;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 14px;
+      background: rgba(0, 0, 0, 0.3);
+      margin-top: 50px;
+    }
+  </style>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <h1>ইব্রাহিম খলিল</h1>
-        <p>ভেটেরিনারি হেলথ কেয়ার (পশু চিকিৎসক)</p>
-    </header>
-
-    <main>
-        <h2>আমার সম্পর্কে</h2>
-        <p>আমি ইব্রাহিম খলিল, একজন নিবেদিত প্রাণ পশু চিকিৎসক।  
-        গরু, ছাগল ও অন্যান্য পশুদের স্বাস্থ্য সুরক্ষায় কাজ করি।</p>
-
-        <h2>আমার সেবা</h2>
-        <ul>
-            <li>গরু-ছাগলের রোগ নির্ণয় ও চিকিৎসা</li>
-            <li>পশু খাদ্য ও পুষ্টি পরামর্শ</li>
-            <li>ভ্যাকসিনেশন ও রোগ প্রতিরোধ</li>
-            <li>জ্বর, পায়খানা, নিউমোনিয়া চিকিৎসা</li>
-        </ul>
-
-        <h2>যোগাযোগ</h2>
-        <p>ঠিকানা: ডি এম খালি ইউনিয়ন, সখিপুর, শরীয়তপুর</p>
-        <p>ফোন: +৮৮০-১XXXXXXXXX</p>
-        <p>ইমেইল: <a href="mailto:ibrahim@example.com">ibrahim@example.com</a></p>
-    </main>
-
-    <footer>
-        &copy; 2025 ইব্রাহিম খলিল। সর্বস্বত্ব সংরক্ষিত।
-    </footer>
+  <header>
+    <h1>ডাঃ ইব্রাহিম খলিল</h1>
+    <p>ভেটেরিনারি হেলথ কেয়ার বিশেষজ্ঞ</p>
+  </header>
+  <div class="content">
+    <div class="info">
+      <p><strong>ঠিকানা:</strong> ডি এম খালি ইউনিয়ন, সখিপুর থানা, শরীয়তপুর জেলা</p>
+      <p><strong>রাজনৈতিক পরিচয়:</strong> দপ্তর সম্পাদক, বাংলাদেশ গণ অধিকার পরিষদ, ভেদাগঞ্জ উপজেলা শাখা</p>
+      <p><strong>বয়স:</strong> ২৮</p>
+      <p><strong>ধর্ম:</strong> ইসলাম</p>
+      <p><strong>জন্ম সাল:</strong> ১৯৯৮</p>
+    </div>
+    <div class="social">
+      <a href="https://www.facebook.com/Ibrahimkhalilvet0" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://wa.me/8801646941182" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://www.instagram.com/ibrahimshkdr22" target="_blank"><i class="fab fa-instagram"></i></a>
+    </div>
+  </div>
+  <footer>
+    &copy; 2025 ডাঃ ইব্রাহিম খলিল | সর্বস্বত্ব সংরক্ষিত
+  </footer>
 </body>
 </html>
