--- a/index.html
+++ b/index.html
@@ -1,80 +1,89 @@
-<!DOCTYPE html><html lang="bn">
+<!DOCTYPE html>
+<html lang="bn">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ডাঃ ইব্রাহিম খলিল | পশু চিকিৎসক</title>
-  <link rel="icon" type="image/png" href="https://postimg.cc/ygw1Hs4J">
+  <title>ডাঃ ইব্রাহিম খলিল</title>
+  <link rel="icon" href="https://postimg.cc/ygw1Hs4J" type="image/x-icon">
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #0077b6, #00b4d8);
-      color: #fff;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #a0c4ff, #d0dff7);
+      color: #1a1a1a;
     }
     header {
+      background-color: #0077b6;
+      color: white;
+      padding: 20px;
       text-align: center;
-      padding: 50px 20px;
-      background-image: url('https://postimg.cc/vgPnL1VJ');
-      background-size: cover;
-      background-position: center;
-      color: #fff;
     }
-    header h1 {
-      font-size: 3rem;
-      margin: 0;
+    header img {
+      max-width: 120px;
+      border-radius: 50%;
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      background-color: #023e8a;
+      padding: 10px;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
     }
     .content {
       padding: 30px;
-      max-width: 800px;
-      margin: auto;
-      background-color: rgba(0, 0, 0, 0.5);
-      border-radius: 10px;
-    }
-    .info {
-      margin: 20px 0;
-      line-height: 1.8;
-    }
-    .social {
       text-align: center;
-      margin-top: 30px;
-    }
-    .social a {
-      margin: 0 10px;
-      text-decoration: none;
-      color: #fff;
-      font-size: 24px;
     }
     footer {
+      background-color: #03045e;
+      color: white;
       text-align: center;
-      padding: 20px;
-      font-size: 14px;
-      background: rgba(0, 0, 0, 0.3);
-      margin-top: 50px;
+      padding: 15px;
+      margin-top: 30px;
+    }
+    .socials a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: white;
     }
   </style>
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
   <header>
+    <img src="https://postimg.cc/vgPnL1VJ" alt="Profile Picture">
     <h1>ডাঃ ইব্রাহিম খলিল</h1>
     <p>ভেটেরিনারি হেলথ কেয়ার বিশেষজ্ঞ</p>
   </header>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="contact.html">Contact</a>
+    <a href="blog.html">Blog</a>
+  </nav>
+
   <div class="content">
-    <div class="info">
-      <p><strong>ঠিকানা:</strong> ডি এম খালি ইউনিয়ন, সখিপুর থানা, শরীয়তপুর জেলা</p>
-      <p><strong>রাজনৈতিক পরিচয়:</strong> দপ্তর সম্পাদক, বাংলাদেশ গণ অধিকার পরিষদ, ভেদাগঞ্জ উপজেলা শাখা</p>
-      <p><strong>বয়স:</strong> ২৮</p>
-      <p><strong>ধর্ম:</strong> ইসলাম</p>
-      <p><strong>জন্ম সাল:</strong> ১৯৯৮</p>
-    </div>
-    <div class="social">
-      <a href="https://www.facebook.com/Ibrahimkhalilvet0" target="_blank"><i class="fab fa-facebook"></i></a>
-      <a href="https://wa.me/8801646941182" target="_blank"><i class="fab fa-whatsapp"></i></a>
-      <a href="https://www.instagram.com/ibrahimshkdr22" target="_blank"><i class="fab fa-instagram"></i></a>
-    </div>
+    <h2>স্বাগতম!</h2>
+    <p>আমি ডাঃ ইব্রাহিম খলিল — গবাদিপশুর চিকিৎসা, পরামর্শ ও রোগ ব্যবস্থাপনায় আপনার বিশ্বস্ত সাথী।</p>
   </div>
+
   <footer>
-    &copy; 2025 ডাঃ ইব্রাহিম খলিল | সর্বস্বত্ব সংরক্ষিত
+    <div class="socials">
+      <a href="https://www.facebook.com/Ibrahimkhalilvet0" target="_blank">📘 Facebook</a>
+      <a href="https://wa.me/8801646941182" target="_blank">📱 WhatsApp</a>
+      <a href="https://www.instagram.com/ibrahimshkdr22" target="_blank">📸 Instagram</a>
+    </div>
+    <p>© ২০২৫ ডাঃ ইব্রাহিম খলিল | সর্বস্বত্ব সংরক্ষিত</p>
   </footer>
+
 </body>
 </html>
