--- a/Services.html
+++ b/Services.html
@@ -2,101 +2,98 @@
 <html lang="bn">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>সার্ভিসসমূহ | ডাঃ ইব্রাহিম খলিল</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>সার্ভিসেস - ডাঃ ইব্রাহিম খলিল</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="https://postimg.cc/ygw1Hs4J" />
   <style>
     body {
-      font-family: 'Noto Sans Bengali', sans-serif;
-      background: linear-gradient(to right, #e0f7fa, #e1f5fe);
       margin: 0;
-      padding: 0;
-      color: #0d47a1;
+      font-family: 'Kalpurush', sans-serif;
+      background: linear-gradient(to right, #e0f7fa, #b2ebf2);
+      color: #004d40;
     }
+
     header {
-      background-color: #0d47a1;
+      background-color: #00695c;
       color: white;
-      padding: 30px;
-      text-align: center;
-    }
-    .services {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 40px;
-    }
-    .card {
-      background-color: white;
       padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       text-align: center;
-      transition: 0.3s;
     }
-    .card:hover {
-      transform: translateY(-5px);
+
+    .container {
+      padding: 30px;
+      max-width: 1000px;
+      margin: auto;
     }
-    .card i {
-      font-size: 40px;
-      color: #0277bd;
-      margin-bottom: 10px;
+
+    h2 {
+      text-align: center;
+      margin-bottom: 30px;
     }
+
+    .service {
+      background-color: white;
+      border-radius: 12px;
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s;
+    }
+
+    .service:hover {
+      transform: scale(1.02);
+    }
+
     footer {
-      background-color: #0d47a1;
+      background-color: #004d40;
       color: white;
       text-align: center;
-      padding: 15px;
+      padding: 10px;
+    }
+
+    a {
+      color: white;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
     }
   </style>
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
   <header>
-    <h1>আমার সেবা সমূহ</h1>
-    <p>ডাঃ ইব্রাহিম খলিল, ভেটেরিনারি হেলথ কেয়ার</p>
+    <h1>🐄 ভেটেরিনারি সার্ভিস সমূহ</h1>
+    <p>ডাঃ ইব্রাহিম খলিল | পশু চিকিৎসা ও স্বাস্থ্য সেবা</p>
   </header>
 
-  <section class="services">
-    <div class="card">
-      <i class="fas fa-stethoscope"></i>
-      <h3>রোগ নির্ণয় ও চিকিৎসা</h3>
-      <p>প্রাথমিক পর্যায়ে গরু-ছাগলের রোগ শনাক্ত করে উপযুক্ত চিকিৎসা দেওয়া হয়।</p>
+  <div class="container">
+    <h2>আমার প্রদত্ত সেবাসমূহ</h2>
+
+    <div class="service">
+      <h3>✅ গরু ও ছাগলের রোগ নির্ণয়</h3>
+      <p>প্রাথমিক লক্ষণ দেখে রোগ চিহ্নিতকরণ ও সঠিক চিকিৎসা পরামর্শ প্রদান।</p>
     </div>
 
-    <div class="card">
-      <i class="fas fa-syringe"></i>
-      <h3>ভ্যাকসিন প্রয়োগ</h3>
-      <p>আবশ্যিক টিকা, ভাইরাল রোগ প্রতিরোধ, ও সিডিউল অনুযায়ী ভ্যাকসিনেশন।</p>
+    <div class="service">
+      <h3>💉 ইনজেকশন ও ওষুধ প্রয়োগ</h3>
+      <p>এন্টিবায়োটিক, ভ্যাকসিন ও অন্যান্য ইনজেকটেবল ওষুধ প্রয়োগ করা হয় পেশাগত দক্ষতায়।</p>
     </div>
 
-    <div class="card">
-      <i class="fas fa-heartbeat"></i>
-      <h3>ইমার্জেন্সি কেয়ার</h3>
-      <p>অতীব জরুরি অবস্থা যেমন শক, বিষক্রিয়া বা রক্তপাত হলে তাৎক্ষণিক চিকিৎসা।</p>
+    <div class="service">
+      <h3>🧪 কালচার ও সেনসিটিভিটি রিপোর্ট বিশ্লেষণ</h3>
+      <p>ব্যাকটেরিয়ার বিরুদ্ধে কার্যকর ওষুধ নির্বাচন করতে রিপোর্ট বিশ্লেষণ করা হয়।</p>
     </div>
 
-    <div class="card">
-      <i class="fas fa-leaf"></i>
-      <h3>প্রাকৃতিক ও হোমিও ট্রিটমেন্ট</h3>
-      <p>ভেষজ ও ঘরোয়া উপায়ে সুরক্ষিত চিকিৎসা প্রদান।</p>
+    <div class="service">
+      <h3>📋 চিকিৎসা ও ফলো-আপ</h3>
+      <p>রোগ অনুযায়ী নির্দিষ্ট চিকিৎসা পরিকল্পনা ও নিয়মিত ফলোআপ দিয়ে সেবা নিশ্চিত করা হয়।</p>
     </div>
-
-    <div class="card">
-      <i class="fas fa-briefcase-medical"></i>
-      <h3>ফার্ম কনসালটেন্সি</h3>
-      <p>গরু-ছাগল পালনের নিয়ম, খাদ্য পরিকল্পনা ও ওষুধ ব্যবস্থাপনা পরামর্শ।</p>
-    </div>
-
-    <div class="card">
-      <i class="fas fa-microscope"></i>
-      <h3>কালচার সেনসিটিভিটি টেস্ট</h3>
-      <p>বায়োটিক রেজিস্টেন্স যাচাই করে উপযুক্ত অ্যান্টিবায়োটিক নির্বাচন।</p>
-    </div>
-  </section>
+  </div>
 
   <footer>
-    © ২০২৫ ডাঃ ইব্রাহিম খলিল | সকল অধিকার সংরক্ষিত
+    <p>&copy; 2025 ডাঃ ইব্রাহিম খলিল | <a href="https://ibrahimkhalilvet0.github.io">হোম পেজ</a></p>
   </footer>
-
 </body>
 </html>
