--- a/Contact.html
+++ b/Contact.html
@@ -1,4 +1,4 @@
-gghhhh<!DOCTYPE html><html lang="bn">
+<!DOCTYPE html><html lang="bn">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
