--- a/Contac.html
+++ b/Contac.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact | Dr. Ibrahim Khalil</title>
-  <link rel="icon" href="https://i.postimg.cc/d3F9FrtV/Picsart-25-07-07-13-19-27-265.jpg" type="image/x-icon" />
+  <title>যোগাযোগ | Dr. Ibrahim Khalil</title>
+  <link rel="icon" href="https://i.postimg.cc/d3F9FrtV/Picsart-25-07-07-13-19-27-265.jpg" type="image/x-icon">
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #e0f7fa, #e3f2fd);
+      background: #f0f8ff;
       color: #333;
     }
 
@@ -20,42 +20,46 @@
       text-align: center;
     }
 
-    .contact-info {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 30px;
+    h1 {
+      margin: 0;
+      font-size: 28px;
     }
 
-    .info-card {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      width: 90%;
-      max-width: 400px;
-      margin: 10px 0;
+    .contact-container {
+      max-width: 600px;
+      margin: 30px auto;
       padding: 20px;
+      background: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0, 119, 182, 0.1);
+    }
+
+    .contact-card {
       display: flex;
       align-items: center;
-      gap: 15px;
+      padding: 15px;
+      margin-bottom: 15px;
+      border-radius: 8px;
+      background-color: #f7fafd;
       transition: 0.3s;
     }
 
-    .info-card:hover {
-      transform: scale(1.02);
-      background-color: #f1faff;
+    .contact-card:hover {
+      background-color: #e0f4ff;
+      transform: scale(1.01);
     }
 
-    .info-card img {
+    .contact-card img {
       width: 30px;
       height: 30px;
+      margin-right: 15px;
     }
 
-    .info-card a {
+    .contact-card a {
       text-decoration: none;
       font-size: 18px;
       color: #0077b6;
-      font-weight: 500;
+      font-weight: bold;
     }
 
     footer {
@@ -65,6 +69,15 @@
       padding: 15px;
       margin-top: 40px;
     }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 22px;
+      }
+      .contact-card a {
+        font-size: 16px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -72,22 +85,22 @@
     <h1>যোগাযোগ করুন</h1>
   </header>
 
-  <section class="contact-info">
-    <div class="info-card">
+  <div class="contact-container">
+    <div class="contact-card">
       <img src="https://img.icons8.com/ios-filled/50/000000/facebook--v1.png" alt="Facebook">
       <a href="https://www.facebook.com/Ibrahimkhalilvet0" target="_blank">Facebook</a>
     </div>
 
-    <div class="info-card">
+    <div class="contact-card">
       <img src="https://img.icons8.com/ios-filled/50/000000/whatsapp.png" alt="WhatsApp">
       <a href="https://wa.me/8801646941182" target="_blank">WhatsApp</a>
     </div>
 
-    <div class="info-card">
+    <div class="contact-card">
       <img src="https://img.icons8.com/ios-filled/50/000000/instagram-new.png" alt="Instagram">
       <a href="https://www.instagram.com/ibrahimshkdr22" target="_blank">Instagram</a>
     </div>
-  </section>
+  </div>
 
   <footer>
     <p>© ২০২৫ ডাঃ ইব্রাহিম খলিল | সর্বস্বত্ব সংরক্ষিত</p>
