--- a/about.html
+++ b/about.html
@@ -3,73 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About - ডাঃ ইব্রাহিম খলিল</title>
-  <link rel="icon" href="https://postimg.cc/ygw1Hs4J" type="image/x-icon">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #cbdcfb, #e6f0ff);
-      color: #1a1a1a;
-    }
-    header {
-      background-color: #0077b6;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      background-color: #023e8a;
-      padding: 10px;
-    }
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    .content {
-      padding: 30px;
-      max-width: 700px;
-      margin: auto;
-    }
-    footer {
-      background-color: #03045e;
-      color: white;
-      text-align: center;
-      padding: 15px;
-      margin-top: 30px;
-    }
-  </style>
+  <title>About Dr. Ibrahim Khalil</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <header>
     <h1>আমার সম্পর্কে</h1>
+    <p>ভেটেরিনারি হেলথ কেয়ার ও সোশ্যাল সেবায় নিয়োজিত</p>
   </header>
 
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
-    <a href="contact.html">Contact</a>
     <a href="blog.html">Blog</a>
   </nav>
 
   <div class="content">
     <h2>ডাঃ ইব্রাহিম খলিল</h2>
-    <p><strong>পেশা:</strong> ভেটেরিনারি হেলথ কেয়ার বিশেষজ্ঞ</p>
-    <p><strong>ঠিকানা:</strong> ডি এম খালি ইউনিয়ন, সখিপুর থানা, শরীয়তপুর জেলা</p>
-    <p><strong>রাজনৈতিক পরিচয়:</strong> দপ্তর সম্পাদক, বাংলাদেশ গণ অধিকার পরিষদ, ভেদাগঞ্জ উপজেলা শাখা</p>
-    <p><strong>বয়স:</strong> ২৮</p>
-    <p><strong>ধর্ম:</strong> ইসলাম</p>
-    <p><strong>জন্ম সাল:</strong> ১৯৯৮</p>
-    <p>আমি একজন নিবেদিত প্রাণ পশু চিকিৎসক, যিনি গরু, ছাগল ও অন্যান্য প্রাণীর সঠিক চিকিৎসা ও যত্নে বিশ্বাসী। আমি ফিল্ড-ভিত্তিক অভিজ্ঞতা ও চিকিৎসা গাইডের মাধ্যমে খামারিদের পাশে থাকার চেষ্টা করি।</p>
+    <p>
+      আমি একজন পশু চিকিৎসক, ভেটেরিনারি হেলথ কেয়ার সার্ভিসে নিয়োজিত। গরু, ছাগল সহ বিভিন্ন প্রাণীর রোগ নির্ণয়, ইনজেকশন প্রয়োগ এবং সঠিক ওষুধ ব্যবস্থাপনা দিয়ে সেবা প্রদান করে থাকি। <br><br>
+      আমি শরীয়তপুর জেলার সখিপুর থানার ডি. এম. খালি ইউনিয়নে বসবাস করি। বয়স ২৮ বছর। পাশাপাশি বাংলাদেশ গণধিকার পরিষদ, ভেদাগঞ্জ উপজেলা শাখার দপ্তর সম্পাদক হিসেবে কাজ করছি।
+    </p>
+
+    <!-- 📩 Contact Section Inside About Page -->
+    <div class="contact-section">
+      <h3>যোগাযোগ করুন</h3>
+      <p>আপনি নিচের যেকোনো মাধ্যম ব্যবহার করে আমার সঙ্গে যোগাযোগ করতে পারেন:</p>
+      <ul>
+        <li>📞 ফোন: 01646-941182</li>
+        <li>📘 Facebook: <a href="https://facebook.com/ibrahimkhalilvet0" target="_blank">facebook.com/ibrahimkhalilvet0</a></li>
+        <li>📱 WhatsApp: <a href="https://wa.me/8801646941182" target="_blank">wa.me/8801646941182</a></li>
+        <li>📸 Instagram: <a href="https://instagram.com/ibrahimshkdr22" target="_blank">@ibrahimshkdr22</a></li>
+      </ul>
+    </div>
   </div>
 
   <footer>
