--- a/about.html
+++ b/about.html
@@ -1,55 +1,12 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="bn">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ডাঃ ইব্রাহিম খলিল সম্পর্কে</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background: linear-gradient(to right, #a0c4ff, #d0dff7);
-      color: #1a1a1a;
-    }
-    header {
-      text-align: center;
-      padding: 20px 0;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      background-color: #023e8a;
-      padding: 10px;
-      margin-bottom: 30px;
-    }
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    .content {
-      max-width: 900px;
-      margin: auto;
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-    footer {
-      text-align: center;
-      padding: 15px;
-      margin-top: 30px;
-      background-color: #03045e;
-      color: white;
-    }
-  </style>
+  <title>About Dr. Ibrahim Khalil</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <header>
     <h1>আমার সম্পর্কে</h1>
     <p>ভেটেরিনারি হেলথ কেয়ার ও সোশ্যাল সেবায় নিয়োজিত</p>
@@ -59,21 +16,25 @@
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
-    <a href="contact.html">Contact</a>
     <a href="blog.html">Blog</a>
   </nav>
 
-  <div class="content">
+  <main>
     <h2>ডাঃ ইব্রাহিম খলিল</h2>
     <p>
-      আমি একজন পশু চিকিৎসক, ভেটেরিনারি হেলথ কেয়ার সার্ভিসে নিয়োজিত। গরু, ছাগল সহ বিভিন্ন প্রাণীর রোগ নির্ণয়, ইনজেকশন প্রয়োগ এবং সঠিক ওষুধ ব্যবস্থাপনা দিয়ে সেবা প্রদান করে থাকি।<br><br>
-      আমি শরীয়তপুর জেলার সখিপুর থানার ডি. এম. খালি ইউনিয়নে বসবাস করি। বয়স ২৮ বছর। পাশাপাশি বাংলাদেশ গণধিকার পরিষদ, ভেদাগঞ্জ উপজেলা শাখার দপ্তর সম্পাদক হিসেবে কাজ করছি।
+      আমি একজন পশু চিকিৎসক, ভেটেরিনারি হেলথ কেয়ার সার্ভিসে নিয়োজিত। গরু,
+      ছাগল সহ বিভিন্ন প্রাণীর রোগ নির্ণয়, ইনজেকশন প্রয়োগ এবং সঠিক ওষুধ ব্যবস্থাপনা
+      দিয়ে সেবা প্রদান করে থাকি।
     </p>
-  </div>
+    <p>
+      আমি শরীয়তপুর জেলার সখিপুর থানার ডি. এম. খালি ইউনিয়নে বসবাস করি। বয়স ২৮
+      বছর। পাশাপাশি বাংলাদেশ গণধিকার পরিষদ, ভেদাগঞ্জ উপজেলা শাখার দপ্তর
+      সম্পাদক হিসেবে কাজ করছি।
+    </p>
+  </main>
 
   <footer>
     <p>© ২০২৫ ডাঃ ইব্রাহিম খলিল | সর্বস্বত্ব সংরক্ষিত</p>
   </footer>
-
 </body>
 </html>
