--- a/about.html
+++ b/about.html
@@ -3,38 +3,113 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About Dr. Ibrahim Khalil</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header>
-    <h1>আমার সম্পর্কে</h1>
-    <p>ভেটেরিনারি হেলথ কেয়ার ও সোশ্যাল সেবায় নিয়োজিত</p>
-  </header>
-
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="services.html">Services</a>
-    <a href="blog.html">Blog</a>
-  </nav>
-
-  <main>
-    <h2>ডাঃ ইব্রাহিম খলিল</h2>
-    <p>
-      আমি একজন পশু চিকিৎসক, ভেটেরিনারি হেলথ কেয়ার সার্ভিসে নিয়োজিত। গরু,
-      ছাগল সহ বিভিন্ন প্রাণীর রোগ নির্ণয়, ইনজেকশন প্রয়োগ এবং সঠিক ওষুধ ব্যবস্থাপনা
-      দিয়ে সেবা প্রদান করে থাকি।
-    </p>
-    <p>
-      আমি শরীয়তপুর জেলার সখিপুর থানার ডি. এম. খালি ইউনিয়নে বসবাস করি। বয়স ২৮
-      বছর। পাশাপাশি বাংলাদেশ গণধিকার পরিষদ, ভেদাগঞ্জ উপজেলা শাখার দপ্তর
-      সম্পাদক হিসেবে কাজ করছি।
-    </p>
-  </main>
-
-  <footer>
-    <p>© ২০২৫ ডাঃ ইব্রাহিম খলিল | সর্বস্বত্ব সংরক্ষিত</p>
-  </footer>
-</body>
-</html>
+  <title>ডাঃ ইব্রাহিম খলিল - সম্পর্কে</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Roboto', Arial, sans-serif;
+      background: #f7f9fc;
+      color: #333;
+      line-height: 1.6;
+    }
+    header {
+      background-color: #023e8a;
+      color: white;
+      padding: 50px 20px;
+      text-align: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    }
+    header h1 {
+      margin: 0;
+      font-weight: 700;
+      font-size: 2.8rem;
+      letter-spacing: 1px;
+    }
+    header p {
+      margin-top: 10px;
+      font-weight: 400;
+      font-size: 1.2rem;
+      color: #ade8f4;
+    }
+    nav {
+      background-color: #0077b6;
+      display: flex;
+      justify-content: center;
+      padding: 15px 0;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 25px;
+      font-weight: 700;
+      font-size: 1rem;
+      transition: color 0.3s ease;
+    }
+    nav a:hover {
+      color: #caf0f8;
+      text-decoration: underline;
+    }
+    .content {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+      background: white;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      border-radius: 12px;
+    }
+    .content h2 {
+      text-align: center;
+      color: #0077b6;
+      font-weight: 700;
+      margin-top: 40px;
+      margin-bottom: 25px;
+      font-size: 2rem;
+      letter-spacing: 0.5px;
+    }
+    .content p {
+      font-size: 1.1rem;
+      color: #444;
+      padding: 0 20px 40px 20px;
+      text-align: justify;
+    }
+    .contact-section {
+      background: #caf0f8;
+      margin: 40px 20px 40px 20px;
+      padding: 25px 30px;
+      border-radius: 12px;
+      box-shadow: 0 1px 6px rgba(0,0,0,0.1);
+    }
+    .contact-section h3 {
+      color: #0077b6;
+      font-weight: 700;
+      margin-bottom: 15px;
+      font-size: 1.6rem;
+      text-align: center;
+    }
+    .contact-section p {
+      text-align: center;
+      font-size: 1rem;
+      color: #023e8a;
+      margin-bottom: 20px;
+    }
+    .contact-section ul {
+      list-style: none;
+      padding: 0;
+      max-width: 400px;
+      margin: 0 auto;
+    }
+    .contact-section ul li {
+      background: white;
+      margin-bottom: 12px;
+      padding: 12px 15px;
+      border-radius: 8px;
+      font-size: 1rem;
+      color: #023e8a;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    .
